# srdt

./: .dockerignore  .env.sample  .gitignore  .npmrc  .pre-commit-config.yaml  .pylintrc  .secrets.baseline  CHANGELOG.md  Dockerfile  README.md  annotation.html  content.json  docker-compose.yml  framework_pipeline_test.ipynb  package.json  pyproject.toml  request.http
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  deactivate.yaml  preproduction.yaml  production.yaml  quality-api.yml  quality-web.yml  quality.yml  release.yml  review-auto.yaml  review.yaml
.kontinuous/: config.yaml  values.yaml
.kontinuous/env/dev/: values.yaml
.kontinuous/env/prod/: values.yaml
api/: .env.sample  .pre-commit-config.yaml  .secrets.baseline  makefile  pyproject.toml  request.http
api/notebooks/: eval2.ipynb
api/srdt_analysis/: anonymiser.py  chunker.py  collections.py  constants.py  corpus.py  data_exploiter.py  data_exploiter_embed.py  data_exploiter_es.py  elastic_handler.py  exceptions.py  legi_data.py  llm_client.py  llm_runner.py  mapper.py  models.py  postgresql_manager.py  reference_extractor.py  sparse.py  test.json  tokenizer.py  url_cleaner.py
api/srdt_analysis/api/: anonymizer.py  launcher.py  main.py  schemas.py
api/srdt_analysis/clients/: collections.py  elastic_handler.py  judilibre_client.py  llm_client.py  postgresql_manager.py
api/srdt_analysis/core/: constants.py  models.py
api/srdt_analysis/ingestion/: agreements.py  data_exploiter.py  data_exploiter_embed.py  judilibre.py  legi_data.py  mapper.py
api/srdt_analysis/scripts/: fetch_judilibre.py  ingest.py
api/srdt_analysis/services/: corpus.py  llm_runner.py
srdt_analysis/: __main__.py  albert.py  chunk.py  chunker.py  collections.py  constants.py  data.py  data_exploiter.py  database_manager.py  document_processor.py  exploit_data.py  framework_test_functions.py  instructions_LLM.py  llm.py  llm_client.py  llm_processor.py  llm_runner.py  logger.py  mapper.py  models.py  postgresql_manager.py  save.py  tokenizer.py  vector.py
srdt_analysis/api/: main.py  schemas.py
srdt_analysis/scripts/: ingest.py
web/: .dockerignore  .env.example  .env.sample  .gitignore  .npmrc  Dockerfile  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  sentry.edge.config.ts  sentry.server.config.ts
web/src/: constants.ts  instrumentation-client.ts  instrumentation.ts  types.ts
(+92 files in other folders)
