[tool.poetry]
name = "srdt-analysis"
version = "0.1.0"
description = ""
authors = ["maxgfr <25312957+maxgfr@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12"
asyncpg = "^0.30.0"
python-dotenv = "^1.0.1"
httpx = "^0.27.2"
pandas = "^2.2.3"
langchain-text-splitters = "^0.3.2"

[tool.poetry.group.dev.dependencies]
pyright = "^1.1.389"
ruff = "^0.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "srdt_analysis.__main__:main"
